--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <style>
+
+      html{
+        font-family: Montserrat, serif;
+      }
+
+    </style>
     <title>Slider</title>
 
 
