--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>InnoceanDashBoard</title>
 
 
-
+    <script data-udata="https://www.data.gouv.fr/" src="https://static.data.gouv.fr/static/oembed.js" async defer></script>
   </head>
   <body>
     <div id="app"></div>
