Ajout Twitter + anniversaire fonctionnel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <title>InnoceanDashBoard</title>
 
-
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script data-udata="https://www.data.gouv.fr/" src="https://static.data.gouv.fr/static/oembed.js" async defer></script>
   </head>
   <body>
