--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="prefers-color-scheme" color-sheme="light dark only">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <style>
 
 
