beacoup trop de changement mais il y a un back-end en plus en gros

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="prefers-color-scheme" color-sheme="light dark only">
+    <meta name="prefers-color-scheme" color-sheme="dark">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <style>
@@ -17,7 +17,11 @@
     <title>InnoceanDashBoard</title>
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script data-udata="https://www.data.gouv.fr/" src="https://static.data.gouv.fr/static/oembed.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.2.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.2.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+
+
 
   </head>
   <body>
