--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="prefers-color-scheme" color-sheme="dark">
+    <meta name="prefers-color-scheme">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <style>
@@ -19,7 +19,7 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.2.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.2.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
 
 
 
